# mini-exp-1

./: .gitignore  Cargo.toml
assets/: char1.ase
src/: main.rs
