[package]
name = "jam-24-11-21"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
bevy_spicy_aseprite = { git = "https://github.com/mdenchev/bevy_spicy_aseprite" }