[package]
name = "mini-exp-1-collision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
bevy_spicy_aseprite = { git = "https://github.com/mdenchev/bevy_spicy_aseprite" }
bevy_prototype_lyon = "0.4.0"
uuid = {version = "1.0.0-alpha.1", features = ["v4", "fast-rng"] }